# libBlob

./: CMakeLists.txt  CTest2JUnit.xsl  build.sh  build_clean.sh  calculate_test_results.ods
include/: action.h  attack.h  blob.h  eat.h  fight.h  movement.h  option.h  pt.h  rnd.h
libBlob/: CMakeLists.txt  Jenkinsfile  build.sh
libBlob/tests/: blob.t.cpp
tests/: 00_00_template.t.cpp  01_00_pt.t.cpp  02_00_movement.t.cpp  02_01_fight.t.cpp  02_02_option.t.cpp  03_00_blob.t.cpp  03_01_blob_history.t.cpp  04_00_blob_distance.t.cpp  05_00_blob_isInRange.t.cpp  05_01_blob_isInSameSquare.t.cpp  05_02_blob_canSmell.t.cpp  06_00_blob_angle.t.cpp  07_00_blob_kill.t.cpp  07_01_blob_move.t.cpp  07_02_blob_fight.t.cpp  07_03_blob_attack.t.cpp  08_00_blob_age.t.cpp  08_01_blob_hunger.t.cpp  09_00_blob_flee.t.cpp  09_01_blob_hunt.t.cpp  09_02_blob_wander.t.cpp  0_0_template.t.cpp  10_00_blob_relativeDifference.t.cpp  10_01_blob_distanceWeight.t.cpp  10_02_blob_attackWeight.t.cpp  10_02_blob_inflictDamageWeightForAttacking.t.cpp  10_03_blob_avoidDamageWeightForAttacking.t.cpp  10_03_blob_fleeWeight.t.cpp  10_04_blob_avoidDamageWeightForFleeing.t.cpp  11_00_blob_chooseNextAction.t.cpp  11_00_blob_chooseNextAction_weights.t.cpp  11_00_blob_findOptions.t.cpp  11_01_blob_chooseNextAction_dead.t.cpp  11_01_blob_chooseNextAction_findOptions.t.cpp  11_01_blob_chooseNextAction_findPossibleActions.t.cpp  11_01_blob_prioritiseOptions.t.cpp  11_02_blob_chooseNextAction_prioritiseActions.t.cpp  11_02_blob_chooseNextAction_prioritiseOptions.t.cpp  11_02_blob_chooseNextAction_selectAction.t.cpp  11_02_blob_chooseNextAction_wander.t.cpp  (+66 more)
